Theme: Fix spacing on user profile page

--- a/docroot/sites/all/themes/opensource/sass/partials/user/_user-base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/user/_user-base.scss
@@ -35,7 +35,12 @@
     .views-field-field-website,
     .views-field-field-user-about {
         float: right;
+        clear: right;
         width: 75%;
+    }
+
+    .views-field-nothing {
+        clear: both;
     }
 
     .views-field-points {
